--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "ResponsavelTecnico", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "ResponsavelTecnico", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -24,13 +24,15 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Responsável Técnico <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="ResponsavelTecnico" class="form-control" placeholder="eg.: Nome do responsável técnico " required maxlength="60" />
+                            <input type="text" name="ResponsavelTecnico" class="form-control" placeholder="eg.: Nome do responsável técnico " 
+                                   title="Por favor informe o Nome do responsável técnico." required maxlength="60" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Cpf <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="cnpj" class="form-control" maxlength="14" placeholder="eg.: Número do CPF do responsável técnico" required />
+                            <input type="text" name="NumCpf" class="form-control" maxlength="14" placeholder="eg.: Número do CPF do responsável técnico" 
+                                   title="Por favor informe o número do CPF do responsável técnico" required />
                         </div>
                     </div>
                     <div class="form-group row">
@@ -40,7 +42,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-envelope"></i>
                                 </span>
-                                <input type="text" name="email" class="form-control" placeholder="eg.: email@email.com" required />
+                                <input type="text" name="EndEmail" class="form-control" placeholder="eg.: email@email.com"  />
                             </div>
                         </div>
                         <label class="col-lg-1 control-label text-lg-right pt-2">Telefone <span class="required">*</span></label>
@@ -49,14 +51,15 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input type="text" id="telefone" name="telefone" placeholder="eg.: Número do documento de correspondência" class="form-control" required>
+                                <input type="text" id="NumTelefone" name="NumTelefone" placeholder="eg.: Número do telefone" class="form-control" 
+                                       title="Por favor informe o número do telefone."required>
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Nº do documento</label>
                         <div class="col-sm-9">
-                            <input type="text" name="documento" class="form-control" placeholder="eg.: Número do documento do responsável técnico" />
+                            <input type="text" name="NumDocumento" class="form-control" placeholder="eg.: Número do documento do responsável técnico" />
                         </div>
                     </div>
 
@@ -75,9 +78,10 @@
                         <label class="col-lg-3 control-label text-sm-right pt-2">Empresa/Órgão púbico<span class="required">*</span></label>
 
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Administrador</option>
-                                <option value="HI">Gestor</option>
+                            <select class="form-control populate select2" name="ddlEmpresa" id="ddlEmpresa"
+                                    title="Por favor selecione uma unidade de infraestrutura." required
+                                    asp-for="CodEmpresa" asp-items="Model.ListEmpresa">
+                                <option value="">Selecionar Empresa/Órgão púbico</option>
                             </select>
                         </div>
                     </div>
@@ -101,32 +105,59 @@
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
 
     <script>
         // Select2
-        (function ($) {
+            (function ($) {
 
-            'use strict';
+                'use strict';
 
-            if ($.isFunction($.fn['select2'])) {
+                var $select = $(".select2").select2({
+                    allowClear: true
+                });
 
-                $(function () {
-                    $('[data-plugin-selectTwo]').each(function () {
-                        var $this = $(this),
-                            opts = {};
+                $(".select2").each(function () {
+                    var $this = $(this),
+                        opts = {};
 
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
+                    var pluginOptions = $this.data('plugin-options');
+                    if (pluginOptions)
+                        opts = pluginOptions;
 
-                        $this.themePluginSelect2(opts);
+                    $this.themePluginSelect2(opts);
+                });
+
+            /*
+             * When you change the value the select via select2, it triggers
+             * a 'change' event, but the jquery validation plugin
+             * only re-validates on 'blur'*/
+             
+            $select.on('change', function() {
+                $(this).trigger('blur');
+            });
+
+            $('#form').validate({
+                ignore: 'input[type=hidden], .select2-input, .select2-focusser'
+            });
+
+            $select.rules('add', 'required');
+
+
+                // checkbox, radio and selects
+                $("#chk-radios-form, #form").each(function() {
+                    $(this).validate({
+                        highlight: function(element) {
+                            $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
+                        },
+                        success: function(element) {
+                            $(element).closest('.form-group').removeClass('has-error');
+                        }
                     });
                 });
 
-            }
-
-        }).apply(this, [jQuery]);
+            }).apply(this, [jQuery]);
 
     </script>
 }
