--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Index.cshtml
@@ -46,11 +46,11 @@
                                     <td>@Html.DisplayFor(modelItem => item.NomResponsavelTecnico)</td>
                                     <td>@Html.DisplayFor(modelItem => item.NumCpf)</td>
                                     <td>@Html.DisplayFor(modelItem => item.EndEmail)</td>
-                                    <td>Empresa</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CodEmpresaResponsavelTecnico)</td>
                                     <td>@Html.DisplayFor(modelItem => item.NumTelefone)</td>
                                     <td class="actions">
-                                        <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="UnidadeInfraEstrutura" asp-route-id="@item.CodResponsavelTecnico" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
-                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                        <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="ResponsavelTecnico" asp-route-id="@item.CodResponsavelTecnico" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
+                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="ResponsavelTecnico" asp-route-id="@item.CodResponsavelTecnico" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
                                     </td>
                                 </tr>
                             }
