--- a/Infraero.Relprev.WebUi/Views/Usuario/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Usuario/Index.cshtml
@@ -69,6 +69,36 @@
                                     <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
                                 </td>
                             </tr>
+                            <tr>
+                                <td>Uriel</td>
+                                <td>999.999.999-99</td>
+                                <td>(61)9999-9999</td>
+                                <td>5</td>
+                                <td class="actions">
+                                    <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="Usuario" asp-route-Empid="2" class="on-default edit-row" style='color:#eea236'><i class="fa fa-pencil"></i></a>
+                                    <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Miguel</td>
+                                <td>999.999.999-99</td>
+                                <td>(61)9999-9999</td>
+                                <td>5</td>
+                                <td class="actions">
+                                    <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="Usuario" asp-route-Empid="2" class="on-default edit-row" style='color:#eea236'><i class="fa fa-pencil"></i></a>
+                                    <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Maria Flor</td>
+                                <td>999.999.999-99</td>
+                                <td>(61)9999-9999</td>
+                                <td>5</td>
+                                <td class="actions">
+                                    <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="Usuario" asp-route-Empid="2" class="on-default edit-row" style='color:#eea236'><i class="fa fa-pencil"></i></a>
+                                    <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
