--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
@@ -24,13 +24,13 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Responsável Técnico <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="ResponsavelTecnico" class="form-control" placeholder="eg.: Nome do responsável técnico " required maxlength="60" />
+                            <input type="text" name="NomUsuario" class="form-control" placeholder="eg.: Nome do responsável técnico " required maxlength="60" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Cpf <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="cnpj" class="form-control" maxlength="14" placeholder="eg.: Número do CPF do responsável técnico" required />
+                            <input type="text" name="NumCpf" class="form-control" maxlength="14" placeholder="eg.: Número do CPF do responsável técnico" required />
                         </div>
                     </div>
                     <div class="form-group row">
@@ -40,7 +40,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-envelope"></i>
                                 </span>
-                                <input type="text" name="email" class="form-control" placeholder="eg.: email@email.com" required />
+                                <input type="text" name="EndEmail" class="form-control" placeholder="eg.: email@email.com" required />
                             </div>
                         </div>
                         <label class="col-lg-1 control-label text-lg-right pt-2">Telefone <span class="required">*</span></label>
