--- a/Infraero.Relprev.WebUi/Views/Usuario/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Usuario/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Infraero.Relprev.CrossCutting.Models.UsuarioModel
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,91 +6,86 @@
 
 <div class="row">
     <div class="col-lg-12">
-    @using (@Html.BeginForm("Create", "Usuario", FormMethod.Post))
-    {
-        <section class="card">
-            <header class="card-header">
-                <div class="card-actions">
-                    <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
-                    <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
-                </div>
-
-                <h2 class="card-title">Cadastrar Usuário</h2>
-
-            </header>
-            <div class="card-body">
-                <div class="form-group row">
-                    <label class="col-sm-3 control-label text-sm-right pt-2">Nome <span class="required">*</span></label>
-                    <div class="col-sm-9">
-                        <input type="text" name="fullname" class="form-control" placeholder="eg.: John Doe" required />
+        @using (@Html.BeginForm("Create", "Usuario", FormMethod.Post))
+        {
+            <section class="card">
+                <header class="card-header">
+                    <div class="card-actions">
+                        <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+                        <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-3 control-label text-sm-right pt-2">Cpf <span class="required">*</span></label>
-                    <div class="col-sm-9">
-                        <input type="text" name="fullname" class="form-control" placeholder="eg.: John Doe" required />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-3 control-label text-sm-right pt-2">Email </label>
-                    <div class="col-lg-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">
-                                <i class="fa fa-envelope"></i>
-                            </span>
-                            <input type="email" name="email" class="form-control" placeholder="eg.: email@email.com" required />
+
+                    <h2 class="card-title">Cadastrar Usuário</h2>
+
+                </header>
+                <div class="card-body">
+                    <div class="form-group row">
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Nome <span class="required">*</span></label>
+                        <div class="col-sm-9">
+                            <input type="text" name="NomUsuario" class="form-control" placeholder="eg.: John Doe" required />
                         </div>
                     </div>
-                    <label class="col-lg-1 control-label text-lg-right pt-2">Telefone</label>
-                    <div class="col-lg-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">
-                                <i class="fa fa-phone"></i>
-                            </span>
-                            <input id="phone" data-plugin-masked-input="" data-input-mask="(999) 999-9999" placeholder="(123) 123-1234" class="form-control">
+                    <div class="form-group row">
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Cpf <span class="required">*</span></label>
+                        <div class="col-sm-9">
+                            <input type="text" name="NumCpf" class="form-control" placeholder="eg.: John Doe" required />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-lg-3 control-label text-sm-right pt-2">Email </label>
+                        <div class="col-lg-4">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-envelope"></i>
+                                </span>
+                                <input type="text" name="EndEmail" class="form-control" placeholder="eg.: email@email.com" required />
+                            </div>
+                        </div>
+                        <label class="col-lg-1 control-label text-lg-right pt-2">Telefone</label>
+                        <div class="col-lg-4">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-phone"></i>
+                                </span>
+                                <input id="NumTelefone" placeholder="(123) 123-1234" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 control-label text-sm-right pt-2">Unidade de Infraestritura<span class="required">*</span></label>
+
+                        <div class="col-lg-9">
+                            <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
+                                    title="Por favor selecione uma unidade de infraestrutura." required
+                                    asp-for="CodUnidadeInfraestrutura" asp-items="Model.ListUnidadeInfraestrutura">
+                                <option value="">Selecionar Unidade de infraestrutura</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-lg-3 control-label text-sm-right pt-2">Tipo Perfil<span class="required">*</span></label>
+
+                        <div class="col-lg-9">
+                            <select data-plugin-selectTwo class="form-control populate">
+                                <option value="AK">Administrador</option>
+                                <option value="HI">Gestor</option>
+                            </select>
                         </div>
                     </div>
                 </div>
-                <div class="form-group row">
-                    <label class="col-sm-3 control-label text-sm-right pt-2">Nome da empresa <span class="required">*</span></label>
-                    <div class="col-sm-9">
-                        <input type="text" name="fullname" class="form-control" placeholder="eg.: John Doe" required />
-                    </div>
-                </div>
+                <footer class="card-footer">
+                    <div class="row justify-content-end">
+                        <div class="col-sm-9">
+                            <button class="btn  btn-success pull-left mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
+                            <button type="reset" class="btn btn-danger pull-left mr-2">Cancelar &nbsp;&nbsp;<i class="fa fa-remove"></i></button>
+                            <a href="@Url.Action("Index", "Usuario")" class="btn btn-dark pull-left">Voltar &nbsp;&nbsp;<i class="fa fa-reply"></i></a>
 
-                <div class="form-group row">
-                    <label class="col-lg-3 control-label text-sm-right pt-2">Unidade de Infraestritura<span class="required">*</span></label>
-
-                    <div class="col-lg-9">
-                        <select data-plugin-selectTwo class="form-control populate">
-                            <option value="AK">Alaska</option>
-                            <option value="HI">Hawaii</option>
-                        </select>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-3 control-label text-sm-right pt-2">Tipo Perfil<span class="required">*</span></label>
-
-                    <div class="col-lg-9">
-                        <select data-plugin-selectTwo class="form-control populate">
-                            <option value="AK">Administrador</option>
-                            <option value="HI">Gestor</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <footer class="card-footer">
-                <div class="row justify-content-end">
-                    <div class="col-sm-9">
-                        <button class="btn  btn-success pull-left mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
-                        <button type="reset" class="btn btn-danger pull-left mr-2">Cancelar &nbsp;&nbsp;<i class="fa fa-remove"></i></button>
-                        <a href="@Url.Action("Index", "Usuario")" class="btn btn-dark pull-left">Voltar &nbsp;&nbsp;<i class="fa fa-reply"></i></a>
-
-                    </div>
-                </div>
-            </footer>
-        </section>
-    }
+                </footer>
+            </section>
+        }
     </div>
 </div>
 @section CssSpecificVendor {
@@ -99,18 +94,18 @@
 }
 @section Scripts {
     <script src="~/vendor/select2/js/select2.js"></script>
-    
+
     <script>
         // Select2
-        (function($) {
+        (function ($) {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'select2' ]) ) {
+            if ($.isFunction($.fn['select2'])) {
 
-                $(function() {
-                    $('[data-plugin-selectTwo]').each(function() {
-                        var $this = $( this ),
+                $(function () {
+                    $('[data-plugin-selectTwo]').each(function () {
+                        var $this = $(this),
                             opts = {};
 
                         var pluginOptions = $this.data('plugin-options');
@@ -124,6 +119,6 @@
             }
 
         }).apply(this, [jQuery]);
-            
+
     </script>
 }
