--- a/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Infraero.Relprev.CrossCutting.Models.RelatoModel
 @{
     ViewData["Title"] = "Cadastrar";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "Relato", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "Relato", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -24,9 +24,10 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura <span class="required">*</span></label>
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
+                            <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
+                                    title="Por favor selecione uma unidade de infraestrutura." required
+                                    asp-for="CodUnidadeInfraestrutura" asp-items="Model.ListUnidadeInfraestrutura">
+                                <option value="">Selecionar Unidade de infraestrutura</option>
                             </select>
                         </div>
                     </div>
@@ -37,7 +38,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </span>
-                                <input id="date" data-plugin-masked-input data-input-mask="99/99/9999" placeholder="Data da ocorrência do relato" class="form-control">
+                                <input id="DatOcorrencia" name="DatOcorrencia" placeholder="Data da ocorrência do relato" class="form-control">
                             </div>
                         </div>
 
@@ -47,32 +48,32 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-clock-o"></i>
                                 </span>
-                                <input type="text" data-plugin-timepicker class="form-control" data-plugin-options='{ "showMeridian": false }' placeholder="eg.: Horário da ocorrência do relato">
+                                <input type="text" id="HorOcorrencia" name="HorOcorrencia" data-plugin-timepicker class="form-control" data-plugin-options='{ "showMeridian": false }' placeholder="eg.: Horário da ocorrência do relato">
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local da Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Nome do Local da Ocorrência do relato  " required maxlength="200"></textarea>
+                            <textarea type="text" rows="3" name="DscLocalOcorrenciaRelator" class="form-control" placeholder="eg.: Nome do Local da Ocorrência do relato  " required maxlength="200"></textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Envolvidos na ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Pessoas e / ou veículos envolvidos no relato" required maxlength="500"></textarea>
+                            <textarea type="text" rows="3" name="DscEnvolvidosOcorrencia" class="form-control" placeholder="eg.: Pessoas e / ou veículos envolvidos no relato" required maxlength="500"></textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição da ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição da ocorrência do relato" required maxlength="1000"></textarea>
+                            <textarea type="text" rows="3" name="DscOcorrenciaRelator" class="form-control" placeholder="eg.: Descrição da ocorrência do relato" required maxlength="1000"></textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Nome do relator </label>
                         <div class="col-sm-9">
-                            <input type="text" name="fullname" class="form-control" placeholder="eg.: Nome do relator" maxlength="100" />
+                            <input type="text" name="NomRelator" class="form-control" placeholder="eg.: Nome do relator" maxlength="100" />
                         </div>
                     </div>
                     <div class="form-group row">
@@ -82,7 +83,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-envelope"></i>
                                 </span>
-                                <input type="email" name="email" class="form-control" placeholder="eg.: E-mail do relator" maxlength="100" />
+                                <input type="text" name="EmailRelator" class="form-control" placeholder="eg.: E-mail do relator" maxlength="100" />
                             </div>
                         </div>
                         <label class="col-lg-1 control-label text-lg-right pt-2">Telefone</label>
@@ -91,14 +92,14 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input id="phone" data-plugin-masked-input="" data-input-mask="(99) 999-9999" placeholder="eg.: Telefone do Relator" class="form-control" maxlength="11">
+                                <input id="NumTelefoneRelator" name="NumTelefoneRelator" placeholder="eg.: Telefone do Relator" class="form-control" maxlength="11">
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Organização</label>
                         <div class="col-sm-9">
-                            <input type="text" name="fullname" class="form-control" placeholder="eg.: Nome da empresa do relator" maxlength="100" />
+                            <input type="text" name="NomEmpresaRelator" class="form-control" placeholder="eg.: Nome da empresa do relator" maxlength="100" />
                         </div>
                     </div>
                     <div class="form-group row">
@@ -117,7 +118,7 @@
                                 <input type="email" name="email" class="form-control" placeholder="eg.: Código de captcha gerado" maxlength="100" />
                             </div>
                         </div>
-                        
+
                         <button type="reset" class="btn btn-warning pull-left mr-2">Atualizar &nbsp;&nbsp;<i class="fa fa-refresh"></i></button>
                     </div>
                 </div>
@@ -146,15 +147,15 @@
     <script src="vendor/bootstrap-timepicker/bootstrap-timepicker.js"></script>
     <script>
         // TimePicker
-        (function($) {
+        (function ($) {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'timepicker' ]) ) {
+            if ($.isFunction($.fn['timepicker'])) {
 
-                $(function() {
-                    $('[data-plugin-timepicker]').each(function() {
-                        var $this = $( this ),
+                $(function () {
+                    $('[data-plugin-timepicker]').each(function () {
+                        var $this = $(this),
                             opts = {};
 
                         var pluginOptions = $this.data('plugin-options');
@@ -168,38 +169,15 @@
             }
 
         }).apply(this, [jQuery]);
-            // Masked Input
-            (function($) {
-
-                'use strict';
-
-                if ( $.isFunction($.fn[ 'mask' ]) ) {
-
-                    $(function() {
-                        $('[data-plugin-masked-input]').each(function() {
-                            var $this = $( this ),
-                                opts = {};
-
-                            var pluginOptions = $this.data('plugin-options');
-                            if (pluginOptions)
-                                opts = pluginOptions;
-
-                            $this.themePluginMaskedInput(opts);
-                        });
-                    });
-
-                }
-
-            }).apply(this, [jQuery]);
-        // Select2
-        (function($) {
+        // Masked Input
+        (function ($) {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'select2' ]) ) {
+            if ($.isFunction($.fn['mask'])) {
 
                 $(function () {
-                    $('[data-plugin-selectTwo]').each(function () {
+                    $('[data-plugin-masked-input]').each(function () {
                         var $this = $(this),
                             opts = {};
 
@@ -207,11 +185,60 @@
                         if (pluginOptions)
                             opts = pluginOptions;
 
-                        $this.themePluginSelect2(opts);
+                        $this.themePluginMaskedInput(opts);
                     });
                 });
 
             }
+
+        }).apply(this, [jQuery]);
+        // Select2
+        (function ($) {
+
+            'use strict';
+
+            var $select = $(".select2").select2({
+                allowClear: true
+            });
+
+            $(".select2").each(function () {
+                var $this = $(this),
+                    opts = {};
+
+                var pluginOptions = $this.data('plugin-options');
+                if (pluginOptions)
+                    opts = pluginOptions;
+
+                $this.themePluginSelect2(opts);
+            });
+
+            /*
+             * When you change the value the select via select2, it triggers
+             * a 'change' event, but the jquery validation plugin
+             * only re-validates on 'blur'*/
+             
+            $select.on('change', function() {
+                $(this).trigger('blur');
+            });
+
+            $('#form').validate({
+                ignore: 'input[type=hidden], .select2-input, .select2-focusser'
+            });
+
+            $select.rules('add', 'required');
+
+
+            // checkbox, radio and selects
+            $("#chk-radios-form, #form").each(function() {
+                $(this).validate({
+                    highlight: function(element) {
+                        $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
+                    },
+                    success: function(element) {
+                        $(element).closest('.form-group').removeClass('has-error');
+                    }
+                });
+            });
 
         }).apply(this, [jQuery]);
 
