os53 - [UC_01_Realizar Login]

--- a/Infraero.Relprev/Infraero.Relprev.Website/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Infraero.Relprev/Infraero.Relprev.Website/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,35 +1,36 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Confirmação de recuperação de senha";
     Layout = "_LoginLayout";
 }
 
-<section class="content">
-    <div class="container-center animated slideInDown">
-        <div class="view-header">
-            <div class="header-icon">
-                <i class="pe page-header-icon pe-7s-id"></i>
+
+<section class="body-sign">
+    <div class="center-sign">
+        <a href="/" class="logo float-left" style="margin-top: 15px;">
+            <img src="~/img/logo.png" height="54" alt="Porto Admin" />
+        </a>
+
+        <div class="panel card-sign">
+            <div class="card-title-sign mt-3 text-right">
+                <h2 class="title text-uppercase font-weight-bold m-0"><i class="fa fa-user mr-1"></i> Recuperar Senha</h2>
             </div>
-            <div class="header-title">
-                <h3>Reset password</h3>
-                <small>
-                    Please enter your email to reset your password.
-                </small>
+            <div class="card-body">
+                <div class="alert alert-warning">
+                    <p class="m-0">Um e-mail foi enviado a você com um link de redefinição de senha!</p>
+                </div>
+
+                <div class="alert alert-info">
+                    <p class="m-0">Se você não vir o e-mail na sua caixa de entrada nos próximos minutos, verifique sua pasta de spam. Se você encontrar o email em seu spam, marque-o como não spam!</p>
+                </div>
+                
+                <a class="mb-1 mt-1 mr-1 btn btn-primary btn-lg btn-block" asp-page="./Login" >Voltar ao Login</a>
+
             </div>
+            
         </div>
 
-        <div class="panel panel-filled">
-            <div class="panel-body">
-                <p>An email has been sent to you with a password reset link!</p>
-                <p>If you don't see the email in your inbox in the next few minutes, please check your spam folder. If you find the email in your spam, please mark it not spam!</p>
-            </div>
-            <div class="panel-footer">
-                <a class="btn btn-default" asp-page="./Login">
-                    <strong>Create Account</strong>
-                </a>
-            </div>
-        </div>
-
+        <p class="text-center text-muted mt-3 mb-3">&copy; Copyright 2019. Todos os direitos reservados.</p>
     </div>
 </section>
