--- a/Infraero.Relprev/Infraero.Relprev.Website/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Infraero.Relprev/Infraero.Relprev.Website/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,46 +1,49 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Recuperar Senha?";
     Layout = "_LoginLayout";
 }
-<section class="content">
-    <div class="container-center animated slideInDown">
-        <div class="view-header">
-            <div class="header-icon">
-                <i class="pe page-header-icon pe-7s-id"></i>
-            </div>
-            <div class="header-title">
-                <h3>Reset password</h3>
-                <small>
-                    Please enter your email to reset your password.
-                </small>
-            </div>
-        </div>
 
-        <div class="panel panel-filled">
-            <div class="panel-body">
+
+<section class="body-sign">
+    <div class="center-sign">
+        <a href="/" class="logo float-left" style="margin-top: 15px;">
+            <img src="~/img/logo.png" height="54" alt="Porto Admin" />
+        </a>
+
+        <div class="panel card-sign">
+            <div class="card-title-sign mt-3 text-right">
+                <h2 class="title text-uppercase font-weight-bold m-0"><i class="fa fa-user mr-1"></i> Recuperar Senha</h2>
+            </div>
+            <div class="card-body">
+                <div class="alert alert-info">
+                    <p class="m-0">Digite seu e-mail abaixo e nós lhe enviaremos instruções de redefinição!</p>
+                </div>
                 @if (Request.HasFormContentType)
                 {
                     <div asp-validation-summary="All" class="alert alert-mini alert-danger margin-bottom-30"></div>
                 }
-                <form method="post" autocomplete="off">
-                    <div class="form-group">
-                        <label asp-for="Input.Email" class="col-form-label">E-mail Address</label>
-                        <input asp-for="Input.Email" type="text" placeholder="example@email.com" title="Please enter you e-mail" required="" value="" class="form-control">
-                        <span class="form-text small">Your address e-mail to set a new password</span>
+
+                <form method="post" autocomplete="off" id="form">
+                    <div class="form-group mb-0">
+                        <div class="input-group">
+                            <input asp-for="Input.Email" type="text" placeholder="E-mail" class="form-control form-control-lg" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-primary btn-lg" type="submit">Recuperar!</button>
+                            </span>
+                        </div>
                     </div>
-                    <div>
-                        <button class="btn btn-accent">Reset password</button>
-                        <a class="btn btn-default" asp-page="./Login">Login</a>
-                    </div>
+
                 </form>
             </div>
         </div>
 
+        <p class="text-center text-muted mt-3 mb-3">&copy; Copyright 2019. Todos os direitos reservados.</p>
     </div>
 </section>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial"/>
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+    <script src="~/js/login.js"></script>
 }
