--- a/Infraero.Relprev/Infraero.Relprev.Website/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Infraero.Relprev/Infraero.Relprev.Website/Areas/Identity/Pages/Account/Login.cshtml
@@ -17,10 +17,14 @@
             </div>
             <div class="card-body">
                 <form method="post" asp-route-returnUrl="@Model.ReturnUrl" autocomplete="off" id="form">
+                    @if (Request.HasFormContentType && Request.Form.Keys.Contains("login"))
+                    {
+                        <div asp-validation-summary="All" class="alert alert-mini alert-danger margin-bottom-30"></div>
+                    }
                     <div class="form-group mb-3">
                         <label>Usuário</label>
                         <div class="input-group input-group-icon">
-                            <input asp-for="Login.Email" type="text" class="form-control form-control-lg" required title="Por favor informe seu usuário." />
+                            <input asp-for="Login.Email" type="text" class="form-control form-control-lg" />
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-user"></i>
