--- a/Infraero.Relprev/Infraero.Relprev.Website/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Infraero.Relprev/Infraero.Relprev.Website/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -5,34 +5,84 @@
     Layout = "_LoginLayout";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Reset your password.</h4>
-<hr/>
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <input asp-for="Input.Code" type="hidden"/>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control"/>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<section class="body-sign">
+    <div class="center-sign">
+        <a href="/" class="logo float-left" style="margin-top: 15px;">
+            <img src="~/img/logo.png" height="54" alt="Porto Admin" />
+        </a>
+
+        <div class="panel card-sign">
+            <div class="card-title-sign mt-3 text-right">
+                <h2 class="title text-uppercase font-weight-bold m-0"><i class="fa fa-user mr-1"></i> Redefir sua senha.</h2>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control"/>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            <div class="card-body">
+
+                <form method="post" autocomplete="off" id="form">
+                    @if (Request.HasFormContentType)
+                    {
+                        <div asp-validation-summary="All" class="alert alert-mini alert-danger margin-bottom-30"></div>
+                    }
+                    <input asp-for="Input.Code" type="hidden" />
+                    <div class="form-group mb-3">
+                        <label>Email</label>
+                        <div class="input-group input-group-icon">
+                            <input asp-for="Input.Email" type="text" class="form-control form-control-lg" />
+                            <span class="input-group-addon">
+                                <span class="icon icon-lg">
+                                    <i class="fa fa-user"></i>
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="form-group mb-3">
+                        <div class="clearfix">
+                            <label class="float-left">Nova Senha</label>
+                        </div>
+                        <div class="input-group input-group-icon">
+                            <input asp-for="Input.Password" type="password" class="form-control form-control-lg" />
+                            <span class="input-group-addon">
+                                <span class="icon icon-lg">
+                                    <i class="fa fa-lock"></i>
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="form-group mb-3">
+                        <div class="clearfix">
+                            <label class="float-left">Confirmar Senha</label>
+                        </div>
+                        <div class="input-group input-group-icon">
+                            <input asp-for="Input.ConfirmPassword" type="password" class="form-control form-control-lg " />
+                            <span class="input-group-addon">
+                                <span class="icon icon-lg">
+                                    <i class="fa fa-lock"></i>
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-sm-12 text-right">
+                            <a class="btn btn-danger pull-right mr-2" asp-page="./Login">Sair &nbsp;&nbsp;<i class="fa fa-reply"></i></a>
+                            <button type="submit" class="btn btn-success pull-right mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
+
+                        </div>
+                    </div>
+
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control"/>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Reset</button>
-        </form>
+
+        </div>
+
+        <p class="text-center text-muted mt-3 mb-3">&copy; Copyright 2019. Todos os direitos reservados.</p>
     </div>
-</div>
+</section>
+
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial"/>
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+    <script src="~/js/login.js"></script>
 }
