--- a/Infraero.Relprev/Infraero.Relprev.Website/Views/Shared/_LoginLayout.cshtml
+++ b/Infraero.Relprev/Infraero.Relprev.Website/Views/Shared/_LoginLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
 
     <!-- Basic -->
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859" />
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta name="keywords" content="Infraero" />
     <meta name="description" content="Infraero Relprev">
     <meta name="author" content="Binnovation - NtitSolutions">
