--- a/Infraero.Relprev.WebUi/Views/SubLocal/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubLocal/Create.cshtml
@@ -36,7 +36,7 @@
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlLocal" id="ddlLocal"
                                     title="Por favor selecione um Local de Ocorrência." required
-                                    asp-for="CodLocal" asp-items='@(new SelectList(string.Empty, "CodLocalStr", "DscLocal"))'>
+                                    asp-for="CodLocal" asp-items='@(new SelectList(string.Empty, "CodLocalStr", "DscUnidadeInfraestrutura"))'>
                             </select>
                         </div>
                     </div>
