--- a/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/Login.cshtml
@@ -24,7 +24,7 @@
                     <div class="form-group mb-3">
                         <label>Usuário</label>
                         <div class="input-group input-group-icon">
-                            <input asp-for="Login.Email" type="text" class="form-control form-control-lg" />
+                            <input asp-for="Login.Email" type="text" class="form-control form-control-lg"  value="ntitsolutions01@gmail.com"/>
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-user"></i>
@@ -39,7 +39,7 @@
                             <a asp-page="./ForgotPassword" class="float-right">Recuperar Senha</a>
                         </div>
                         <div class="input-group input-group-icon">
-                            <input asp-for="Login.Password" type="password" class="form-control form-control-lg" />
+                            <input asp-for="Login.Password" type="password" class="form-control form-control-lg" value="78945612"/>
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-lock"></i>
