--- a/Infraero.Relprev.WebUi/Views/Usuario/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Usuario/Create.cshtml
@@ -30,37 +30,51 @@
                         <label class="col-sm-3 control-label text-sm-right pt-2">Cpf <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <input type="text" name="NumCpf" class="form-control" placeholder="eg.: Número do CPF do usuário"
-                                   title="Por favor informe o número do CPF do usuário" />
+                                   title="Por favor informe o número do CPF do usuário" required />
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-lg-3 control-label text-sm-right pt-2">Email </label>
+                        <label class="col-lg-3 control-label text-sm-right pt-2">Email <span class="required">*</span></label>
                         <div class="col-lg-4">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-envelope"></i>
                                 </span>
-                                <input type="text" name="EndEmail" class="form-control" placeholder="eg.: Endereço eletrônico válido do usuário" required />
+                                <input type="text" name="EndEmail" class="form-control" placeholder="eg.: Endereço eletrônico válido do usuário"
+                                       title="Por favor informe um endereço eletrônico válido do usuário" required />
                             </div>
                         </div>
-                        <label class="col-lg-1 control-label text-lg-right pt-2">Telefone</label>
+                        <label class="col-lg-1 control-label text-lg-right pt-2">Telefone<span class="required">*</span></label>
                         <div class="col-lg-4">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input id="NumTelefone" placeholder="(123) 123-1234" class="form-control">
+                                <input id="NumTelefone" placeholder="eg.: Telefone de contato do usuário" class="form-control"
+                                       title="Por favor informe o telefone de contato do usuário" required>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <label class="col-lg-3 control-label text-sm-right pt-2">Unidade de Infraestritura<span class="required">*</span></label>
+                        <label class="col-lg-3 control-label text-sm-right pt-2">Nome da empresa<span class="required">*</span></label>
+
+                        <div class="col-lg-9">
+                            <select class="form-control populate select2" name="ddlEmpresa" id="ddlEmpresa"
+                                    title="Por favor selecione uma empresa." required
+                                    asp-for="CodEmpresa" asp-items="Model.ListEmpresa">
+                                <option value="">Selecionar Empresa</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 control-label text-sm-right pt-2">Unidade de Infraestrutura<span class="required">*</span></label>
 
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
                                     title="Por favor selecione uma unidade de infraestrutura." required
-                                    asp-for="CodUnidadeInfraestrutura" asp-items="Model.ListUnidadeInfraestrutura">
+                                    asp-for="CodUnidadeInfraestrutura" asp-items='@(new SelectList(string.Empty, "CodUnidadeInfraestrutura", "DscLocal"))'>
                                 <option value="">Selecionar Unidade de infraestrutura</option>
                             </select>
                         </div>
@@ -69,9 +83,10 @@
                         <label class="col-lg-3 control-label text-sm-right pt-2">Tipo Perfil<span class="required">*</span></label>
 
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Administrador</option>
-                                <option value="HI">Gestor</option>
+                            <select class="form-control populate select2" name="ddlPerfil" id="ddlPerfil"
+                                    title="Por favor selecione um perfil." required
+                                    asp-for="CodPerfil" asp-items="Model.ListPerfil">
+                                <option value="">Selecionar Perfil</option>
                             </select>
                         </div>
                     </div>
@@ -97,57 +112,5 @@
 @section Scripts {
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
-
-    <script>
-        // Select2
-            (function ($) {
-
-                'use strict';
-
-                var $select = $(".select2").select2({
-                    allowClear: true
-                });
-
-                $(".select2").each(function () {
-                    var $this = $(this),
-                        opts = {};
-
-                    var pluginOptions = $this.data('plugin-options');
-                    if (pluginOptions)
-                        opts = pluginOptions;
-
-                    $this.themePluginSelect2(opts);
-                });
-
-            /*
-             * When you change the value the select via select2, it triggers
-             * a 'change' event, but the jquery validation plugin
-             * only re-validates on 'blur'*/
-             
-            $select.on('change', function() {
-                $(this).trigger('blur');
-            });
-
-            $('#form').validate({
-                ignore: 'input[type=hidden], .select2-input, .select2-focusser'
-            });
-
-            $select.rules('add', 'required');
-
-
-                // checkbox, radio and selects
-                $("#chk-radios-form, #form").each(function() {
-                    $(this).validate({
-                        highlight: function(element) {
-                            $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
-                        },
-                        success: function(element) {
-                            $(element).closest('.form-group').removeClass('has-error');
-                        }
-                    });
-                });
-
-            }).apply(this, [jQuery]);
-
-    </script>
+    <script src="~/js/usuario.js"></script>
 }
